edit tomcat jvm paramter